--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 #table {
-    background-color: rosybrown;
+    background-color: beige;
     width: 50%;
     height: 400px;
     border-radius: 10px;
